# django-url-permissions

./: LICENSE  MANIFEST.in  README.md  db.sqlite3  manage.py  setup.cfg
UrlPermission/: __init__.py
UrlPermission/UrlPermissions/: asgi.py  settings.py  urls.py
UrlPermission/permissions/: admin.py  app.py  defaults.py  forms.py  middlewares.py  utils.py  views.py
UrlPermission/permissions/migrations/: 0001_initial.py
UrlPermission/templates/: dummy.html
UrlPermission/templates/permission/: group-delete.html  group-form.html  group-list.html
UrlPermissions/: settings.py  urls.py  wsgi.py
permissions/: app.py  extras.py  forms.py  models.py  urls.py  views.py
templates/: layout.html
templates/permission/: group-form.html  group-list.html
