[metadata]
name = django-url-permissions
version = 0.2.1
description = A Django app to give role permissions on urls directly.
long_description = file: README.rst
url = https://github.com/yazanpsut/django-url-permissions
author = Yazan Alhorani
author_email = yazan.alhorani@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = false
packages = find: